[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Results.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="Results" type="Node2D"]
script = ExtResource( 1 )

[node name="ResultsDisplay" type="Node2D" parent="."]

[node name="TimeRemaining" type="Label" parent="ResultsDisplay"]
visible = false
margin_left = 182.0
margin_top = 92.0
margin_right = 358.0
margin_bottom = 123.0
text = "Time Remaining: 0 seconds"

[node name="SuccessfulCards" type="Label" parent="ResultsDisplay"]
visible = false
margin_left = 183.0
margin_top = 127.0
margin_right = 378.0
margin_bottom = 158.0
text = "Cards Successfully Processed: 0 / 20"

[node name="GuidebookUses" type="Label" parent="ResultsDisplay"]
visible = false
margin_left = 181.0
margin_top = 164.0
margin_right = 277.0
margin_bottom = 195.0
text = "Guidebook Uses: 0"

[node name="Ranking" type="Sprite" parent="."]
visible = false
position = Vector2( 777, 129 )
texture = ExtResource( 2 )

[node name="RankingLabel" type="Label" parent="."]
visible = false
margin_left = 746.0
margin_top = 175.0
margin_right = 856.0
margin_bottom = 189.0
text = "(TEMP) Ranking: S"

[node name="PlayAgainButton" type="Button" parent="."]
visible = false
margin_left = 393.0
margin_top = 312.0
margin_right = 608.0
margin_bottom = 402.0
text = "Play Again"

[node name="StartMenuButton" type="Button" parent="."]
visible = false
margin_left = 394.0
margin_top = 431.0
margin_right = 609.0
margin_bottom = 521.0
text = "Return to Main Menu"

[connection signal="pressed" from="PlayAgainButton" to="." method="_on_PlayAgainButton_pressed"]
[connection signal="pressed" from="StartMenuButton" to="." method="_on_StartMenuButton_pressed"]
